test/1.4/errors/T_WUNUSED_DML12.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// COMPILE-ONLY

/// SCAN-FOR-TAGS WUNUSED_DML12.dml
import "WUNUSED_DML12.dml";
